--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -20,9 +20,9 @@ window_padding_width 6.0
 hide_window_decorations yes
 
 # Colors
-background_opacity 0.9
+background_opacity 0.7
 selection_foreground #1F2430
-selection_background #FFCC66
+selection_background #800080
 
 ## Black
 color0 #5C6773
