--- a/linux/picom/picom.conf
+++ b/linux/picom/picom.conf
@@ -1,4 +1,7 @@
-# Shadows
+# ############################################################################ #
+# #                                 SHADOW                                   # #
+# ############################################################################ #
+
 shadow               = true;
 shadow-radius        = 20;
 shadow-spread        = 10;
@@ -13,27 +16,40 @@ shadow-exclude = [
     "_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'"
 ];
 
-#Corners
+
+# ############################################################################ #
+# #                                 CORNERS                                  # #
+# ############################################################################ #
+
 corner-radius = 10;
 rounded-corners-exclude = [
   "class_g = 'dmenu'"
 ];
 
-# Fading
-fading = true;
-fade-delta = 5;
-fade-in-step = 0.056;
+# ############################################################################ #
+# #                                 FADING                                   # #
+# ############################################################################ #
+
+
+fading        = true;
+fade-delta    = 5;
+fade-in-step  = 0.056;
 fade-out-step = 0.06;
 
-# Other
-vsync                  = false;
-dbe                    = false;
-backend = "glx";
 
-# Opacity
+# ############################################################################ #
+# #                                 OPACITY                                  # #
+# ############################################################################ #
 
 opacity-rule = [
   "95:name *= 'Discord'",
   "92:name *= 'Codium'"
 ];
 
+# ############################################################################ #
+# #                                 OTHERS                                   # #
+# ############################################################################ #
+
+vsync   = false;
+dbe     = false;
+backend = "glx";
