--- a/linux/kitty/kitty.conf
+++ b/linux/kitty/kitty.conf
@@ -1,25 +1,43 @@
-# Fonts
+# ############################################################################ #
+# #                                 FONTS                                    # #
+# ############################################################################ #
+
 font_family      Input Regular
 bold_font        Input Bold
 italic_font      Input Italic
 bold_italic_font Input Bold Italic
 font_size        13.0
 
-# URLs
+# ############################################################################ #
+# #                                 URLs                                     # #
+# ############################################################################ #
+
 url_style single
 
-# Cursor
+# ############################################################################ #
+# #                                 CURSOR                                   # #
+# ############################################################################ #
+
 cursor_blink_interval 0
 
-# Bell
+# ############################################################################ #
+# #                                 BELL                                     # #
+# ############################################################################ #
+
 enable_audio_bell no
 visual_bell_duration 0.0
 
-# Window
+# ############################################################################ #
+# #                                 WINDOW                                   # #
+# ############################################################################ #
+
 window_padding_width 6.0
 hide_window_decorations yes
 
-# Colors
+# ############################################################################ #
+# #                                 COLORS                                   # #
+# ############################################################################ #
+
 background_opacity 0.7
 selection_foreground #1F2430
 selection_background #800080
@@ -56,7 +74,10 @@ color14 #A8F4DA
 color7  #C7C7C7
 color15 #FFFFFF
 
-# System Integration
+# ############################################################################ #
+# #                                 SYSTEM-INTEGRATION                       # #
+# ############################################################################ #
+
 allow_remote_control yes
 clipboard_control write-clipboard write-primary no-append
 macos_option_as_alt both
