Blur in picom  🔍

--- a/linux/picom/picom.conf
+++ b/linux/picom/picom.conf
@@ -42,9 +42,23 @@ fade-out-step = 0.06;
 # ############################################################################ #
 
 opacity-rule = [
-  "95:name *= 'Discord'",
+  "96:name *= 'Discord'",
   "92:name *= 'Codium'"
 ];
+
+# ############################################################################ #
+# #                                 BLUR                                     # #
+# ############################################################################ #
+
+blur-background       = true;
+blur-background-frame = true;
+blur-background-fixed = true;
+# blur-method 	     = "dual_kawase";
+blur-method 	     = "kernel";
+
+blur-kern     = "3x3box";
+# blur-method = "kawase";
+blur-strength = 2;
 
 # ############################################################################ #
 # #                                 OTHERS                                   # #
@@ -53,3 +67,5 @@ opacity-rule = [
 vsync   = false;
 dbe     = false;
 backend = "glx";
+
+#E
