--- a/linux/vscode/settings.json
+++ b/linux/vscode/settings.json
@@ -1,19 +1,26 @@
 {
     "editor.cursorSmoothCaretAnimation": true,
+    "terminal.integrated.smoothScrolling": true,
     "editor.bracketPairColorization.enabled": true,
     "editor.guides.bracketPairs":"active",
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.startupEditor": "none",
     "workbench.colorTheme": "930c70c8-474e-4e2d-a223-d1e2b9da4fb1",
-    "rpc.buttonEnabled": true,
-    "rpc.detailsDebugging": "?? Debugging {file_name}",
-    "rpc.detailsEditing": "?? In {workspace} {problems}",
-    "rpc.detailsIdling": "?? Idling",
-    "rpc.detailsViewing": "?? In {workspace} {problems}",
-    "rpc.lowerDetailsDebugging": "?? Debugging: {workspace}",
-    "rpc.lowerDetailsViewing": "????? Viewing {file_name}",
-    "rpc.lowerDetailsNoWorkspaceFound": "?? No workspace.",
-    "rpc.lowerDetailsEditing": "????? Working on {file_name}:{current_line}:{current_column}",
-    "rpc.idleText": "><",
-    "rpc.smallImage": "Nekode",
+    "vscord.status.button.enabled": true,
+    "vscord.app.name": "Custom",
+    "vscord.status.details.text.debugging": "😻 Debugging {file_name}",
+    "vscord.status.details.text.editing": "😻 In {workspace} {problems}",
+    "vscord.status.details.text.idle": "😻 Idling",
+    "vscord.status.details.text.viewing": "😻 In {workspace} {problems}",
+    "vscord.status.state.text.debugging": "😻 Debugging: {workspace}",
+    "vscord.status.state.text.viewing": "😻 Viewing {file_name}",
+    "vscord.status.state.text.noWorkspaceFound": "😻 No workspace.",
+    "vscord.status.state.text.editing": "😻 Working on {file_name}:{current_line}:{current_column}",
+    "vscord.status.image.small.idle.text": "><",
+    "vscord.status.image.small.editing.text": "Nekode",
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "doki.statusbar.name": "OwO",
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
 }
