--- a/linux/vscode/settings.json
+++ b/linux/vscode/settings.json
@@ -2,6 +2,7 @@
     "editor.cursorSmoothCaretAnimation": true,
     "terminal.integrated.smoothScrolling": true,
     "editor.bracketPairColorization.enabled": true,
+    "javascript.updateImportsOnFileMove.enabled": "always",
     "editor.guides.bracketPairs":"active",
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.startupEditor": "none",
@@ -17,10 +18,13 @@
     "vscord.status.state.text.noWorkspaceFound": "😻 No workspace.",
     "vscord.status.state.text.editing": "😻 Working on {file_name}:{current_line}:{current_column}",
     "vscord.status.image.small.idle.text": "><",
-    "vscord.status.image.small.editing.text": "Nekode",
-    "javascript.updateImportsOnFileMove.enabled": "always",
+    "vscord.status.image.small.editing.text": "💕 ><",
+    "vscord.status.image.small.editing.key": "mew",
+    "vscord.status.image.large.editing.key": "https://media.giphy.com/media/pOKrXLf9N5g76/giphy.gif",
     "doki.statusbar.name": "OwO",
     "[html]": {
         "editor.defaultFormatter": "vscode.html-language-features"
     },
+    "workbench.iconTheme": "material-icon-theme",
+    "glassit.alpha": 200,
 }
