--- a/linux/vscode/settings.json
+++ b/linux/vscode/settings.json
@@ -10,14 +10,14 @@
     "vscord.status.button.enabled": true,
     "vscord.app.name": "Custom",
     "vscord.status.details.text.debugging": "😻 Debugging {file_name}",
-    "vscord.status.details.text.editing": "😻 In {workspace} {problems}",
-    "vscord.status.details.text.idle": "😻 Idling",
+    "vscord.status.details.text.editing": "​🐱​ In {workspace} {problems}",
+    "vscord.status.details.text.idle": "🐱💤 Idling",
     "vscord.status.details.text.viewing": "😻 In {workspace} {problems}",
     "vscord.status.state.text.debugging": "😻 Debugging: {workspace}",
     "vscord.status.state.text.viewing": "😻 Viewing {file_name}",
-    "vscord.status.state.text.noWorkspaceFound": "😻 No workspace.",
+    "vscord.status.state.text.noWorkspaceFound": "😿 No workspace.",
     "vscord.status.state.text.editing": "😻 Working on {file_name}:{current_line}:{current_column}",
-    "vscord.status.image.small.idle.text": "><",
+    "vscord.status.image.small.notInFile.text": "🐈 Not in a file",
     "vscord.status.image.small.editing.text": "💕 ><",
     "vscord.status.image.small.editing.key": "mew",
     "vscord.status.image.large.editing.key": "https://media.giphy.com/media/pOKrXLf9N5g76/giphy.gif",
