--- a/linux/vscode/settings.json
+++ b/linux/vscode/settings.json
@@ -1,30 +1,90 @@
 {
-    "editor.cursorSmoothCaretAnimation": true,
+    "update.mode": "manual",
     "terminal.integrated.smoothScrolling": true,
-    "editor.bracketPairColorization.enabled": true,
     "javascript.updateImportsOnFileMove.enabled": "always",
-    "editor.guides.bracketPairs":"active",
+    "window.zoomLevel": 0.2,
     "workbench.editor.highlightModifiedTabs": true,
     "workbench.startupEditor": "none",
     "workbench.colorTheme": "930c70c8-474e-4e2d-a223-d1e2b9da4fb1",
-    "vscord.status.button.enabled": true,
+    "workbench.iconTheme": "material-icon-theme",
+    "workbench.tips.enabled": false,
+    "workbench.list.smoothScrolling": true,
     "vscord.app.name": "Custom",
     "vscord.status.details.text.debugging": "😻 Debugging {file_name}",
-    "vscord.status.details.text.editing": "​🐱​ In {workspace} {problems}",
-    "vscord.status.details.text.idle": "🐱💤 Idling",
-    "vscord.status.details.text.viewing": "😻 In {workspace} {problems}",
-    "vscord.status.state.text.debugging": "😻 Debugging: {workspace}",
-    "vscord.status.state.text.viewing": "😻 Viewing {file_name}",
+    "vscord.status.details.text.editing": "​💖 In {workspace} {problems}",
+    "vscord.status.details.text.idle": "💖💤 Idling",
+    "vscord.status.details.text.viewing": "💖 In {workspace} {problems}",
+    "vscord.status.state.text.debugging": "💖 Debugging: {workspace}",
+    "vscord.status.state.text.viewing": "💖 Viewing {file_name}",
     "vscord.status.state.text.noWorkspaceFound": "😿 No workspace.",
     "vscord.status.state.text.editing": "😻 Working on {file_name}:{current_line}:{current_column}",
     "vscord.status.image.small.notInFile.text": "🐈 Not in a file",
     "vscord.status.image.small.editing.text": "💕 ><",
     "vscord.status.image.small.editing.key": "mew",
-    "vscord.status.image.large.editing.key": "https://media.giphy.com/media/pOKrXLf9N5g76/giphy.gif",
+    "vscord.status.image.large.editing.key": "https://media1.tenor.com/m/eMgB6hNVdkQAAAAC/sleepy-girl.gif",
+    "vscord.status.buttons.button1.enabled": true,
+    "vscord.status.buttons.button1.active.enabled": true,
+    "vscord.status.buttons.button1.active.label": "uwu",
+    "vscord.status.buttons.button1.active.url": "https://discord.gg/soku",
     "doki.statusbar.name": "OwO",
     "[html]": {
         "editor.defaultFormatter": "vscode.html-language-features"
     },
-    "workbench.iconTheme": "material-icon-theme",
-    "glassit.alpha": 200,
+    "glassit.alpha": 230,
+    "explorer.confirmDelete": false,
+    "[javascript]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
+    "editor.fontLigatures": true,
+    "editor.minimap.enabled": false,
+    "editor.guides.indentation": false,
+    "editor.renderWhitespace": "none",
+    "editor.renderLineHighlight": "none",
+    "editor.matchBrackets": "never",
+    "editor.guides.bracketPairs":"active",
+    "editor.hover.enabled": false,
+    "editor.showFoldingControls": "never",
+    "editor.bracketPairColorization.enabled": true,
+    "editor.scrollbar.horizontal": "hidden",
+    "editor.scrollbar.vertical": "hidden",
+    "editor.overviewRulerBorder": false,
+    "editor.cursorBlinking": "solid",
+    "editor.cursorSmoothCaretAnimation": "on",
+    "editor.tabSize": 4,
+    "editor.detectIndentation": false,
+    "editor.fontSize": 13,
+    "editor.lineHeight": 1.5,
+    "editor.smoothScrolling": true,
+
+    "animations.Install-Method": "Apc Customize UI++",
+    "animations.UseCursorColorForCursorAnimation": true,
+    "animations.Scrolling": "Fade",
+    "animations.Tabs": "Flip",
+    "animations.Command-Palette": "Fade",
+
+    "apc.font.family": "Candara",
+    "apc.listRow": {
+      "lists": [
+        "explorer-folders-view",
+        "quick-input-list",
+        "results"
+      ],
+      "height": 30
+    },
+    "apc.stylesheet": {
+      ".title-actions": "display: none !important",
+      ".quick-input-widget.show-file-icons, .editor-widget.find-widget": "box-shadow: none !important",
+      ".filematch .monaco-icon-label:before, .custom-list-row.results .monaco-list-row .monaco-icon-label:before": "background-position: 0 bottom !important",
+      ".filematch .monaco-count-badge": "padding: 5px 6px 0 6px !important",
+      ".sidebar .title-label": "padding: 0 !important",
+      ".monaco-workbench .monaco-list:not(.element-focused):focus:before": "outline: none !important",
+      ".sidebar": "border: none !important",
+      ".monaco-editor .cursors-layer .cursor": "background-image: linear-gradient(135deg, #F6B8D0 10%, #FFFFFF 100%)",
+      ".quick-input-list-row div": "display: flex !important; align-items: center !important",
+      ".panel .composite.title": "visibility: hidden !important",
+      ".title.show-file-icons .label-container .monaco-icon-label.file-icon": "padding-bottom: 6px !important",
+      ".sidebar .title-label h2": "line-height: 2.8 !important",
+      ".monaco-editor .scroll-decoration": "display: none !important",
+      ".monaco-scrollable-element > .shadow.top": "display: none !important",
+    },
 }
